src/objects/Upload_File__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Check_Time__c</fullName>
        <description>Last Date Time, when the Workflow Checked for existence of Attachment on the Depostion Record based on Attachment ID</description>
        <inlineHelpText>Last Date Time, when the Workflow Checked for existence of Attachment on the Depostion Record based on Attachment ID</inlineHelpText>
        <label>Attachment Check Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <description>Attachment ID of the deposition record, when saved by the Force.com site</description>
        <inlineHelpText>Attachment ID of the deposition record, when saved by the Force.com site</inlineHelpText>
        <label>Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Number__c</fullName>
        <label>Deposition Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipLabel>Upload Files</relationshipLabel>
        <relationshipName>Upload_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>File Name uploaded by the user</description>
        <inlineHelpText>File Name uploaded by the user</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exhibit</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Upload File</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Upload-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>